backends/drm: don't break crtc<->plane connections

The kernel rejects such commits without the crtc being completely turned
off first.

BUG: 462214